# slides

./: .gitignore  Makefile  Pipfile  README.md  Taskfile.yaml  aqua.yaml  lefthook.yaml  pyproject.toml  renovate.json5  wrangler.jsonc
.github/workflows/: deploy.yml  main.yml
contents/: conf.py  index.rst
contents/_sass/: _layout.scss  my-solarized-large-udgothic.scss  my-solarized-large.scss  my-solarized-nijibox.scss  my-solarized.scss  pyconjp-2022-lt.scss  pyconjp-2025.scss  sphinxconjp-2018.scss
contents/_snippets/: aboutme-nijibox.rst.txt
contents/_static/: .gitignore
contents/jtf-2020/: index.rst
contents/jtf-2021/: 4_develop-plugin.rst  index.rst
contents/jtf-2021w/: 4_sphinx-revealjs.rst  index.rst
contents/pycon-apac-2025-report/: index.rst
contents/pycon-mini-tokai-2024/: _about-pytest.rst.txt  _age-cli.rst  _conclusion.rst  _conclusion.rst.txt  _overview.rst  _pytest-for-e2e.rst  _rust-pros-and-cons.rst  index.rst
contents/pycon-mini-tokai-2025-lt/: demo.py  index.rst  youtube.rst.txt
contents/pyconapac-2023/: _about-pypi.rst.txt  _conclusion.rst.txt  _overview.rst  _overview.rst.txt  _packaging.rst  _packaging.rst.txt  _with-github.rst  index.rst
contents/pyconapac-2023-sprint/: index.rst
contents/pyconjp-2019/: 2_whoami-201909-private.rst.txt  index.rst
contents/pyconjp-2020/: 1_whoami.rst  2_slack-chatops.rst.txt  4_fastapi-localenv.rst.txt  5_fastapi-introduction.rst.txt  6_fastapi-chatbot-1.rst.txt  7_fastapi-chatbot-2.rst.txt  8_cloudrun.rst.txt  9_links.rst.txt  index.rst
contents/pyconjp-2021/: 1_introduction.rst.txt  4_using-pypicloud.rst.txt  5_used-pypicloud.rst  6_conclusion.rst.txt  index.rst
extensions/: sphinxcontrib_pypi_role.py
source/: conf.py  index.rst
(+57 files in other folders)
