[project]
name = "slides"
version = "1.0.0"
description = "My public presentations"
authors = [
    { name = "Kazuya Takei", email = "myself@attakei.net" }
]
dependencies = [
    "oembedpy>=0.4.0",
    "sphinx-revealjs>=2.5.0",
    "sphinxcontrib-sass~=0.3.4",
    "sphinxcontrib-budoux~=0.1.5",
    "sphinxemoji~=0.3.1",
    "sphinxext-opengraph~=0.13.0",
    "rst-pypi-ref~=0.4.0",
    "sphinxcontrib-blockdiag~=3.0.0",
    "sphinxnotes-strike",
    "atsphinx-qrcode>=0.2.0",
    "sphinx-nekochan>=0.3.4",
]
readme = "README.md"
requires-python = ">= 3.13"

[dependency-groups]
dev = [
    "doc8>=1.1.2",
    "esbonio>=0.16.4",
    "ruff>=0.12.8",
    "sphinx-autobuild>=2024.10.3",
    "ty>=0.0.1a17",
]
publish = [
    "sphinx-revealjs[screenshot]>=2.5.0",
]

[tool.uv]
managed = true

[tool.doc8]
ignore = [
    # TODO: Fix after?
    "D001", "D002", "D005",
]
